--- a/WOW-Fusion/Properties/Resources.resx
+++ b/WOW-Fusion/Properties/Resources.resx
@@ -223,4 +223,10 @@
   <data name="close_outline" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\close_outline.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="reprint" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reprint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
