--- a/WOW-Fusion/Properties/Resources.resx
+++ b/WOW-Fusion/Properties/Resources.resx
@@ -229,4 +229,19 @@
   <data name="reprint" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reprint.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="sack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sack_empty" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sack_empty.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sack_green" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sack_green.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sack_red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sack_red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sack_yellow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\sack_yellow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
